docs/en/4.0.0/api/File.md
#RhoFile
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;25</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Constructs</i></b></a><li><a href="#mclose" data-target="cMethodclose" class="autouncollapse">Destructor</a></li><li><a href="#mopen" data-target="cMethodopen" class="autouncollapse">Constructor</a></li></li><li class="divider"></li><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mbasenameSTATIC" data-target="cMethodbasename" class="autouncollapse">basename</a></li><li><a href="#mcopySTATIC" data-target="cMethodcopy" class="autouncollapse">copy</a></li><li><a href="#mdeleteDirSTATIC" data-target="cMethoddeleteDir" class="autouncollapse">deleteDir</a></li><li><a href="#mdeleteFileSTATIC" data-target="cMethoddeleteFile" class="autouncollapse">deleteFile</a></li><li><a href="#mdeleteRecursiveSTATIC" data-target="cMethoddeleteRecursive" class="autouncollapse">deleteRecursive</a></li><li><a href="#mdirnameSTATIC" data-target="cMethoddirname" class="autouncollapse">dirname</a></li><li><a href="#mexistsSTATIC" data-target="cMethodexists" class="autouncollapse">exists</a></li><li><a href="#mgetFileSizeSTATIC" data-target="cMethodgetFileSize" class="autouncollapse">getFileSize</a></li><li><a href="#misDirSTATIC" data-target="cMethodisDir" class="autouncollapse">isDir</a></li><li><a href="#misFileSTATIC" data-target="cMethodisFile" class="autouncollapse">isFile</a></li><li><a href="#mjoinSTATIC" data-target="cMethodjoin" class="autouncollapse">join</a></li><li><a href="#mlistDirSTATIC" data-target="cMethodlistDir" class="autouncollapse">listDir</a></li><li><a href="#mmakeDirSTATIC" data-target="cMethodmakeDir" class="autouncollapse">makeDir</a></li><li><a href="#mmakeDirsSTATIC" data-target="cMethodmakeDirs" class="autouncollapse">makeDirs</a></li><li><a href="#mreadSTATIC" data-target="cMethodread" class="autouncollapse">read</a></li><li><a href="#mrenameSTATIC" data-target="cMethodrename" class="autouncollapse">rename</a></li></li><li class="divider"></li><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Instance</i></b></a><li><a href="#mflush" data-target="cMethodflush" class="autouncollapse">flush</a></li><li><a href="#misOpened" data-target="cMethodisOpened" class="autouncollapse">isOpened</a></li><li><a href="#mread" data-target="cMethodread" class="autouncollapse">read</a></li><li><a href="#mreadAll" data-target="cMethodreadAll" class="autouncollapse">readAll</a></li><li><a href="#mseek" data-target="cMethodseek" class="autouncollapse">seek</a></li><li><a href="#msize" data-target="cMethodsize" class="autouncollapse">size</a></li><li><a href="#mwrite" data-target="cMethodwrite" class="autouncollapse">write</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;1</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">List contents of a folder</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>File I/O</p>
<p>Use this API to access local files for reading and writing. Only string data can be read and written with this API. Please note that binary files are not supported. Strings filled with \0 will be truncated to the last non \0 character.</p>

<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mbasenameSTATIC'/><div class=' method  js ruby android ios wp8' id='mbasenameSTATIC'><h3><strong  >basename</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mbasenameSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mbasenameSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mbasenameSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mbasenameSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-basenameSTATIC'><div class="tab-pane fade active in" id="mbasenameSTATIC1"><p>Return basename part for the specified path. Will remove any prefix up to the last path separator (&lsquo;/&rsquo; or &lsquo;\&rsquo; depending on platform). Exampe: for path &lsquo;/full/path/to/file.ext&rsquo; basename will return &lsquo;file.ext&rsquo;.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mbasenameSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Full pathname for which basename is given. </p></li></ul></div></div><div class="tab-pane fade" id="mbasenameSTATIC3"></div><div class="tab-pane fade" id="mbasenameSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : Basename part for the given path.</li></ul></div></div><div class="tab-pane fade" id="mbasenameSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.basename(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.basename(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mclose'/><div class=' method  js ruby android ios wp8' id='mclose'><h3><strong  ><span class="label label-inverse"> Destructor</span> close</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mclose1" data-toggle="tab">Description</a></li><li ><a href="#mclose4" data-toggle="tab">Return</a></li><li ><a href="#mclose6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-close'><div class="tab-pane fade active in" id="mclose1"><p>Closes file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mclose2"></div><div class="tab-pane fade" id="mclose3"></div><div class="tab-pane fade" id="mclose4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mclose6"><div><p><strong>Method Access:</strong></p><ul><li>Class Method: This method is a destructor and can only be accessed via the object that was created by the `new` constructor. <ul><li>JavaScript: <code>myObj.close()</code> </li><li>Ruby: <code>@myObj.close()</code></li></ul></li></ul></div></div></div>  </div><a name ='mcopySTATIC'/><div class=' method  js ruby android ios wp8' id='mcopySTATIC'><h3><strong  >copy</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> from, <span class="text-info">STRING</span> to)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcopySTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mcopySTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mcopySTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mcopySTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-copySTATIC'><div class="tab-pane fade active in" id="mcopySTATIC1"><p>Copies file to specified destination.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcopySTATIC2"><div><p><strong>Parameters</strong></p><ul><li>from : <span class='text-info'>STRING</span><p>File name to be copied. </p></li><li>to : <span class='text-info'>STRING</span><p>Destination path. </p></li></ul></div></div><div class="tab-pane fade" id="mcopySTATIC3"></div><div class="tab-pane fade" id="mcopySTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : Error code. 0 if no error</li></ul></div></div><div class="tab-pane fade" id="mcopySTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.copy(<span class="text-info">STRING</span> from, <span class="text-info">STRING</span> to)</code> </li><li>Ruby: <code>Rho::RhoFile.copy(<span class="text-info">STRING</span> from, <span class="text-info">STRING</span> to)</code></li></ul></li></ul></div></div></div>  </div><a name ='mdeleteDirSTATIC'/><div class=' method  js ruby android ios wp8' id='mdeleteDirSTATIC'><h3><strong  >deleteDir</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdeleteDirSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mdeleteDirSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mdeleteDirSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mdeleteDirSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-deleteDirSTATIC'><div class="tab-pane fade active in" id="mdeleteDirSTATIC1"><p>Deletes directory. Non-empty directory will not be deleted.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdeleteDirSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Full path to the directory to be deleted. </p></li></ul></div></div><div class="tab-pane fade" id="mdeleteDirSTATIC3"></div><div class="tab-pane fade" id="mdeleteDirSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : Error code. 0 on success, -1 otherwise.</li></ul></div></div><div class="tab-pane fade" id="mdeleteDirSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.deleteDir(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.deleteDir(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mdeleteFileSTATIC'/><div class=' method  js ruby android ios wp8' id='mdeleteFileSTATIC'><h3><strong  >deleteFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdeleteFileSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mdeleteFileSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mdeleteFileSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mdeleteFileSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-deleteFileSTATIC'><div class="tab-pane fade active in" id="mdeleteFileSTATIC1"><p>Deletes file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdeleteFileSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Full path to the file to be deleted. </p></li></ul></div></div><div class="tab-pane fade" id="mdeleteFileSTATIC3"></div><div class="tab-pane fade" id="mdeleteFileSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : Error code. 0 on success, -1 otherwise.</li></ul></div></div><div class="tab-pane fade" id="mdeleteFileSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.deleteFile(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.deleteFile(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mdeleteRecursiveSTATIC'/><div class=' method  js ruby android ios wp8' id='mdeleteRecursiveSTATIC'><h3><strong  >deleteRecursive</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path, <span class="text-info">BOOLEAN</span> leaveRoot)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdeleteRecursiveSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mdeleteRecursiveSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mdeleteRecursiveSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mdeleteRecursiveSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-deleteRecursiveSTATIC'><div class="tab-pane fade active in" id="mdeleteRecursiveSTATIC1"><p>Deletes all directory contents.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdeleteRecursiveSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Path to the directory. </p></li><li>leaveRoot : <span class='text-info'>BOOLEAN</span> <span class='label label-info'>Optional</span><span class='label '> Default: false</span><p>Set to true if you only want to delete directory contents, but no the directory itself. </p></li></ul></div></div><div class="tab-pane fade" id="mdeleteRecursiveSTATIC3"></div><div class="tab-pane fade" id="mdeleteRecursiveSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mdeleteRecursiveSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.deleteRecursive(<span class="text-info">STRING</span> path, <span class="text-info">BOOLEAN</span> leaveRoot)</code> </li><li>Ruby: <code>Rho::RhoFile.deleteRecursive(<span class="text-info">STRING</span> path, <span class="text-info">BOOLEAN</span> leaveRoot)</code></li></ul></li></ul></div></div></div>  </div><a name ='mdirnameSTATIC'/><div class=' method  js ruby android ios wp8' id='mdirnameSTATIC'><h3><strong  >dirname</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdirnameSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mdirnameSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mdirnameSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mdirnameSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-dirnameSTATIC'><div class="tab-pane fade active in" id="mdirnameSTATIC1"><p>Returns directory name part of the specified path.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdirnameSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Path. </p></li></ul></div></div><div class="tab-pane fade" id="mdirnameSTATIC3"></div><div class="tab-pane fade" id="mdirnameSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : Directory name.</li></ul></div></div><div class="tab-pane fade" id="mdirnameSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.dirname(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.dirname(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mexistsSTATIC'/><div class=' method  js ruby android ios wp8' id='mexistsSTATIC'><h3><strong  >exists</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mexistsSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mexistsSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mexistsSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mexistsSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-existsSTATIC'><div class="tab-pane fade active in" id="mexistsSTATIC1"><p>Checks if specified path exists.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mexistsSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Full pathname of file or directory. </p></li></ul></div></div><div class="tab-pane fade" id="mexistsSTATIC3"></div><div class="tab-pane fade" id="mexistsSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN : True if path exists. Otherwise false.</li></ul></div></div><div class="tab-pane fade" id="mexistsSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.exists(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.exists(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mflush'/><div class=' method  js ruby android ios wp8' id='mflush'><h3><strong  >flush</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mflush1" data-toggle="tab">Description</a></li><li ><a href="#mflush4" data-toggle="tab">Return</a></li><li ><a href="#mflush6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-flush'><div class="tab-pane fade active in" id="mflush1"><p>Flushes all buffered data to the storage media.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mflush2"></div><div class="tab-pane fade" id="mflush3"></div><div class="tab-pane fade" id="mflush4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mflush6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.flush()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetFileSizeSTATIC'/><div class=' method  js ruby android ios wp8' id='mgetFileSizeSTATIC'><h3><strong  >getFileSize</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetFileSizeSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mgetFileSizeSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetFileSizeSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mgetFileSizeSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getFileSizeSTATIC'><div class="tab-pane fade active in" id="mgetFileSizeSTATIC1"><p>Returns size of the file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mgetFileSizeSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Path to the file. </p></li></ul></div></div><div class="tab-pane fade" id="mgetFileSizeSTATIC3"></div><div class="tab-pane fade" id="mgetFileSizeSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : File size in bytes.</li></ul></div></div><div class="tab-pane fade" id="mgetFileSizeSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.getFileSize(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.getFileSize(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='misDirSTATIC'/><div class=' method  js ruby android ios wp8' id='misDirSTATIC'><h3><strong  >isDir</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#misDirSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#misDirSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#misDirSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#misDirSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-isDirSTATIC'><div class="tab-pane fade active in" id="misDirSTATIC1"><p>Checks if specified path is a directory.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="misDirSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Full pathname of the directory. </p></li></ul></div></div><div class="tab-pane fade" id="misDirSTATIC3"></div><div class="tab-pane fade" id="misDirSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN : True if path is a directory. False otherwise.</li></ul></div></div><div class="tab-pane fade" id="misDirSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.isDir(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.isDir(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='misFileSTATIC'/><div class=' method  js ruby android ios wp8' id='misFileSTATIC'><h3><strong  >isFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#misFileSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#misFileSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#misFileSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#misFileSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-isFileSTATIC'><div class="tab-pane fade active in" id="misFileSTATIC1"><p>Checks if specified path is a file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="misFileSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Full pathname of the file. </p></li></ul></div></div><div class="tab-pane fade" id="misFileSTATIC3"></div><div class="tab-pane fade" id="misFileSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN : True if path is a file. False otherwise.</li></ul></div></div><div class="tab-pane fade" id="misFileSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.isFile(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.isFile(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='misOpened'/><div class=' method  js ruby android ios wp8' id='misOpened'><h3><strong  >isOpened</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#misOpened1" data-toggle="tab">Description</a></li><li ><a href="#misOpened4" data-toggle="tab">Return</a></li><li ><a href="#misOpened6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-isOpened'><div class="tab-pane fade active in" id="misOpened1"><p>Checks if file is opened.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="misOpened2"></div><div class="tab-pane fade" id="misOpened3"></div><div class="tab-pane fade" id="misOpened4"><div><p><strong>Synchronous Return:</strong></p><ul><li>BOOLEAN : True if file is opened, false otherwise.</li></ul></div></div><div class="tab-pane fade" id="misOpened6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.isOpened()</code></li></ul></li></ul></div></div></div>  </div><a name ='mjoinSTATIC'/><div class=' method  js ruby android ios wp8' id='mjoinSTATIC'><h3><strong  >join</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> p1, <span class="text-info">STRING</span> p2)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mjoinSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mjoinSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mjoinSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mjoinSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-joinSTATIC'><div class="tab-pane fade active in" id="mjoinSTATIC1"><p>Joins two parts of the path concidering all necessary path delimiters. I.e.: join(&lsquo;/path/to&rsquo;,&lsquo;file&rsquo;) will return &lsquo;/path/to/file&rsquo;</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mjoinSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>p1 : <span class='text-info'>STRING</span><p>First part of the path. </p></li><li>p2 : <span class='text-info'>STRING</span><p>Second part of the path. </p></li></ul></div></div><div class="tab-pane fade" id="mjoinSTATIC3"></div><div class="tab-pane fade" id="mjoinSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : Joined path.</li></ul></div></div><div class="tab-pane fade" id="mjoinSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.join(<span class="text-info">STRING</span> p1, <span class="text-info">STRING</span> p2)</code> </li><li>Ruby: <code>Rho::RhoFile.join(<span class="text-info">STRING</span> p1, <span class="text-info">STRING</span> p2)</code></li></ul></li></ul></div></div></div>  </div><a name ='mlistDirSTATIC'/><div class=' method  js ruby android ios wp8' id='mlistDirSTATIC'><h3><strong  >listDir</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mlistDirSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mlistDirSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mlistDirSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mlistDirSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-listDirSTATIC'><div class="tab-pane fade active in" id="mlistDirSTATIC1"><p>Lists all entries of specified directory.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mlistDirSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Directory path. </p></li></ul></div></div><div class="tab-pane fade" id="mlistDirSTATIC3"></div><div class="tab-pane fade" id="mlistDirSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>ARRAY : Array of directory entry names. If directory is empty array of size 0 will be returned.</li></ul></div></div><div class="tab-pane fade" id="mlistDirSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.listDir(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.listDir(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mmakeDirSTATIC'/><div class=' method  js ruby android ios wp8' id='mmakeDirSTATIC'><h3><strong  >makeDir</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mmakeDirSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mmakeDirSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mmakeDirSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mmakeDirSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-makeDirSTATIC'><div class="tab-pane fade active in" id="mmakeDirSTATIC1"><p>Creates directory. If all top-level nodes of the path doesn&rsquo;t exists, directory will not be created.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mmakeDirSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Path to the new directory. </p></li></ul></div></div><div class="tab-pane fade" id="mmakeDirSTATIC3"></div><div class="tab-pane fade" id="mmakeDirSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : Error code. 0 on success, -1 otherwise.</li></ul></div></div><div class="tab-pane fade" id="mmakeDirSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.makeDir(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.makeDir(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mmakeDirsSTATIC'/><div class=' method  js ruby android ios wp8' id='mmakeDirsSTATIC'><h3><strong  >makeDirs</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mmakeDirsSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mmakeDirsSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mmakeDirsSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mmakeDirsSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-makeDirsSTATIC'><div class="tab-pane fade active in" id="mmakeDirsSTATIC1"><p>Creates directory and all top-level directories if necessary. Subsequent isDir call is necessary to check if path was successfully created.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mmakeDirsSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Path to the directory to be created. </p></li></ul></div></div><div class="tab-pane fade" id="mmakeDirsSTATIC3"></div><div class="tab-pane fade" id="mmakeDirsSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mmakeDirsSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.makeDirs(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.makeDirs(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mopen'/><div class=' method  js ruby android ios wp8' id='mopen'><h3><span class="label label-inverse"> Constructor</span>  <strong  > new RhoFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> mode)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mopen1" data-toggle="tab">Description</a></li><li ><a href="#mopen2" data-toggle="tab">Parameters</a></li><li ><a href="#mopen4" data-toggle="tab">Return</a></li><li ><a href="#mopen6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-open'><div class="tab-pane fade active in" id="mopen1"><p>Opens file in specified mode.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mopen2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Path to file. </p></li><li>mode : <span class='text-info'>INTEGER</span><p>File open mode. </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>RhoFile.OPEN_FOR_APPEND - (1)</dt><dd>Open file for output at the end of a file. The file is created if it does not exist.</dt><dt>RhoFile.OPEN_FOR_READ - (2)</dt><dd>Open file for input operations. The file must exist.</dt><dt>RhoFile.OPEN_FOR_WRITE - (3)</dt><dd>Create an empty file for output operations. If a file with the same name already exists, its contents are discarded and the file is treated as a new empty file.</dt><dt>RhoFile.OPEN_FOR_READ_WRITE - (4)</dt><dd>Open a file for update (both for input and output). The file must exist.</dt></dl></li></ul></div></div><div class="tab-pane fade" id="mopen3"></div><div class="tab-pane fade" id="mopen4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mopen6"><div><p><strong>Method Access:</strong></p><ul><li>Class Method: This method is a constructor and can only be accessed via the `new` construct. <ul><li>JavaScript: <code>var myObj = new Rho.RhoFile(<span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> mode)</code> </li><li>Ruby: <code>@myObj = Rho::RhoFile.new(<span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> mode)</code></li></ul></li></ul></div></div></div>  </div><a name ='mreadSTATIC'/><div class=' method  js ruby android ios wp8' id='mreadSTATIC'><h3><strong  >read</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mreadSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mreadSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mreadSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mreadSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-readSTATIC'><div class="tab-pane fade active in" id="mreadSTATIC1"><p>Reads specified file to a string object.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mreadSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p>Path to file. </p></li></ul></div></div><div class="tab-pane fade" id="mreadSTATIC3"></div><div class="tab-pane fade" id="mreadSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : File contents</li></ul></div></div><div class="tab-pane fade" id="mreadSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.read(<span class="text-info">STRING</span> path)</code> </li><li>Ruby: <code>Rho::RhoFile.read(<span class="text-info">STRING</span> path)</code></li></ul></li></ul></div></div></div>  </div><a name ='mread'/><div class=' method  js ruby android ios wp8' id='mread'><h3><strong  >read</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> size)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mread1" data-toggle="tab">Description</a></li><li ><a href="#mread2" data-toggle="tab">Parameters</a></li><li ><a href="#mread4" data-toggle="tab">Return</a></li><li ><a href="#mread6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-read'><div class="tab-pane fade active in" id="mread1"><p>Reads specified number of symbols from current position of the file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mread2"><div><p><strong>Parameters</strong></p><ul><li>size : <span class='text-info'>INTEGER</span><p>Number of symbols to be read. </p></li></ul></div></div><div class="tab-pane fade" id="mread3"></div><div class="tab-pane fade" id="mread4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : String from current position of file containing specified number of symbols</li></ul></div></div><div class="tab-pane fade" id="mread6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.read(<span class="text-info">INTEGER</span> size)</code></li></ul></li></ul></div></div></div>  </div><a name ='mreadAll'/><div class=' method  js ruby android ios wp8' id='mreadAll'><h3><strong  >readAll</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mreadAll1" data-toggle="tab">Description</a></li><li ><a href="#mreadAll4" data-toggle="tab">Return</a></li><li ><a href="#mreadAll6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-readAll'><div class="tab-pane fade active in" id="mreadAll1"><p>Reads all file contents to the string object.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mreadAll2"></div><div class="tab-pane fade" id="mreadAll3"></div><div class="tab-pane fade" id="mreadAll4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : Contents of the file.</li></ul></div></div><div class="tab-pane fade" id="mreadAll6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.readAll()</code></li></ul></li></ul></div></div></div>  </div><a name ='mrenameSTATIC'/><div class=' method  js ruby android ios wp8' id='mrenameSTATIC'><h3><strong  >rename</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> from, <span class="text-info">STRING</span> to)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mrenameSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mrenameSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mrenameSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mrenameSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-renameSTATIC'><div class="tab-pane fade active in" id="mrenameSTATIC1"><p>Renames/moves file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mrenameSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>from : <span class='text-info'>STRING</span><p>Original path. </p></li><li>to : <span class='text-info'>STRING</span><p>New path. </p></li></ul></div></div><div class="tab-pane fade" id="mrenameSTATIC3"></div><div class="tab-pane fade" id="mrenameSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : Error code. 0 on success, -1 otherwise.</li></ul></div></div><div class="tab-pane fade" id="mrenameSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.RhoFile.rename(<span class="text-info">STRING</span> from, <span class="text-info">STRING</span> to)</code> </li><li>Ruby: <code>Rho::RhoFile.rename(<span class="text-info">STRING</span> from, <span class="text-info">STRING</span> to)</code></li></ul></li></ul></div></div></div>  </div><a name ='mseek'/><div class=' method  js ruby android ios wp8' id='mseek'><h3><strong  >seek</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> pos)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mseek1" data-toggle="tab">Description</a></li><li ><a href="#mseek2" data-toggle="tab">Parameters</a></li><li ><a href="#mseek4" data-toggle="tab">Return</a></li><li ><a href="#mseek6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-seek'><div class="tab-pane fade active in" id="mseek1"><p>Sets file position to specified value from the beginning of the file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mseek2"><div><p><strong>Parameters</strong></p><ul><li>pos : <span class='text-info'>INTEGER</span><p>File position. </p></li></ul></div></div><div class="tab-pane fade" id="mseek3"></div><div class="tab-pane fade" id="mseek4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mseek6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.seek(<span class="text-info">INTEGER</span> pos)</code></li></ul></li></ul></div></div></div>  </div><a name ='msize'/><div class=' method  js ruby android ios wp8' id='msize'><h3><strong  >size</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msize1" data-toggle="tab">Description</a></li><li ><a href="#msize4" data-toggle="tab">Return</a></li><li ><a href="#msize6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-size'><div class="tab-pane fade active in" id="msize1"><p>Returns file size.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="msize2"></div><div class="tab-pane fade" id="msize3"></div><div class="tab-pane fade" id="msize4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : File size in bytes.</li></ul></div></div><div class="tab-pane fade" id="msize6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.size()</code></li></ul></li></ul></div></div></div>  </div><a name ='mwrite'/><div class=' method  js ruby android ios wp8' id='mwrite'><h3><strong  >write</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> val)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mwrite1" data-toggle="tab">Description</a></li><li ><a href="#mwrite2" data-toggle="tab">Parameters</a></li><li ><a href="#mwrite4" data-toggle="tab">Return</a></li><li ><a href="#mwrite6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-write'><div class="tab-pane fade active in" id="mwrite1"><p>Writes passed string at current position.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mwrite2"><div><p><strong>Parameters</strong></p><ul><li>val : <span class='text-info'>STRING</span><p>String to be written. </p></li></ul></div></div><div class="tab-pane fade" id="mwrite3"></div><div class="tab-pane fade" id="mwrite4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER : Number of bytes written.</li></ul></div></div><div class="tab-pane fade" id="mwrite6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.write(<span class="text-info">STRING</span> val)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>List contents of a folder</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">

                   Iterate through the contents of a folder and divide the entries in "folders" and "files"
               <ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

           
var folders = [];
var files = [];
var root_path = "/arbitrary/path"
var entries = Rho.File.listDir(root_path);

for (var i = 0; i &lt; entries.length; i++) {
  var entry = entries[i];
  if ((entry != ".") && (entry != "..")) {

    (Rho.RhoFile.isDir(Rho.RhoFile.join(root_path, entry)) ? folders : files).push(entry);
  }
}
                   
                 </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
folders = []
files = []

root_path = "/arbitrary/path"
entries = Rho::File.listDir(root_path)

entries.each do |entry|
  unless (entry == "." || entry == "..")
    (Rho::File.isDir(Rho::File.join(root_path,entry)) ? folders : files) &lt;&lt; entry
  end
end
                   
                 </code></pre></div></div>  </div></div></div></div></div>